<resources>
    <string name="app_name">Family Map</string>
    <string name="click_on_marker">Click on a marker to see event</string>
    <string name="to_see_event_details">details</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_family_tree_lines">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="father_s_side">Father\'s Side</string>
    <string name="filter_by_father_s_side_of_family">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_s_side">Mother\'s Side</string>
    <string name="filter_by_mother_s_side_of_family">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_events">Male Events</string>
    <string name="filter_events_based_on_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_events">Female Events</string>
    <string name="logout">Logout</string>
    <string name="return_to_login_screen">RETURN TO LOGIN SCREEN</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="gender">Gender:</string>
    <string name="server_host">Server Host:</string>
    <string name="server_host_hint">Server Host...</string>
    <string name="server_port">Server Port:</string>
    <string name="server_port_hint">Server Port...</string>
    <string name="user_name">User Name:</string>
    <string name="username_hint">Username...</string>
    <string name="password">Password:</string>
    <string name="password_hint">Password...</string>
    <string name="first_name_login">First Name:</string>
    <string name="first_name_login_hint">First Name...</string>
    <string name="last_name_login">Last Name:</string>
    <string name="last_name_login_hint">Last Name...</string>
    <string name="email_login">Email:</string>
    <string name="email_login_hint">Email...</string>
    <string name="gender_login">Gender:</string>
    <string name="m_login">M</string>
    <string name="f_login">F</string>
    <string name="register_login_fragment">Register</string>
    <string name="sign_in_login_fragment">Sign In</string>

</resources>
