<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.SettingsActivity"
        >

        <RelativeLayout
            android:padding="14dip"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/lifeStoryLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_story_lines"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/storyLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:text="@string/show_life_story_lines"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/lifeStoryLines"/>

            <Switch
                android:id="@+id/lifeStoryLinesSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textOff="OFF"
                android:textOn="ON"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:padding="14dip"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/familyTreeLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family_tree_lines"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/treeLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:text="@string/show_family_tree_lines"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/familyTreeLines"/>

            <Switch
                android:id="@+id/familyTreeLinesSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textOff="OFF"
                android:textOn="ON"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:padding="14dip"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/spouseLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spouse_lines"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/sLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:text="@string/show_spouse_lines"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/spouseLines"/>

            <Switch
                android:id="@+id/spouseLinesSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textOff="OFF"
                android:textOn="ON"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:padding="14dip"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/settingFatherSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/father_s_side"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/fatherSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:text="@string/filter_by_father_s_side_of_family"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/settingFatherSide"/>

            <Switch
                android:id="@+id/settingFatherSideSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textOff="OFF"
                android:textOn="ON"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:padding="14dip"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/settingMotherSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mother_s_side"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/motherSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:text="@string/filter_by_mother_s_side_of_family"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/settingMotherSide"/>

            <Switch
                android:id="@+id/settingMotherSideSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textOff="OFF"
                android:textOn="ON"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:padding="14dip"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/settingMaleEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_events"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/maleEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:text="@string/filter_events_based_on_gender"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/settingMaleEvents"/>

            <Switch
                android:id="@+id/settingMaleEventsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textOff="OFF"
                android:textOn="ON"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:padding="14dip"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/settingFemaleEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_events"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/femaleEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:text="@string/filter_events_based_on_gender"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/settingFemaleEvent"/>

            <Switch
                android:id="@+id/settingFemaleEventSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textOff="OFF"
                android:textOn="ON"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:padding="14dip"
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/settingLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:text="@string/return_to_login_screen"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/settingLogout"/>

        </RelativeLayout>

    </TableLayout>

</LinearLayout>